layout and color changes

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 								<div class="pricing-item third">
 									<div class="pricing-header">
 										<h3 class="name">Standard</h3>
-										<h2 class="amount">42</h2>
+										<h2 class="amount">42.-</h2>
 									</div><!-- pricing-header -->
 									<div class="pricing-options">
 										<p>
@@ -329,7 +329,7 @@
 														aria-hidden="true"></i></span>-</td>
 											<td class="venue"><span><i class="fa" aria-hidden="true"></i></span>Main</td>	
 										</tr>
-										<tr>
+										<tr class="schedules-break">
 											<td class="time"><span><i class="fa fa-clock-o"
 														aria-hidden="true"></i></span>10:00 - 10:20</td>
 											<td class="session" colspan="3"><span><i class="fa fa-list-alt"
@@ -353,7 +353,7 @@
 														aria-hidden="true"></i></span>-</td>
 											<td class="venue"><span><i class="fa" aria-hidden="true"></i></span>Community</td>
 										</tr>
-										<tr>
+										<tr class="schedules-break">
 											<td class="time"><span><i class="fa fa-clock-o"
 														aria-hidden="true"></i></span>11:00 - 11:20</td>
 											<td class="session" colspan="3"><span><i class="fa fa-list-alt"
@@ -377,7 +377,7 @@
 														aria-hidden="true"></i></span>-</td>
 											<td class="venue"><span><i class="fa" aria-hidden="true"></i></span>Community</td>
 										</tr>
-										<tr>
+										<tr class="schedules-break">
 											<td class="time"><span><i class="fa fa-clock-o"
 														aria-hidden="true"></i></span>12:00 - 13:20</td>
 											<td class="session" colspan="3"><span><i class="fa fa-list-alt"
@@ -401,7 +401,7 @@
 														aria-hidden="true"></i></span>-</td>
 											<td class="venue"><span><i class="fa" aria-hidden="true"></i></span>Community</td>
 										</tr>
-										<tr>
+										<tr class="schedules-break">
 											<td class="time"><span><i class="fa fa-clock-o"
 														aria-hidden="true"></i></span>14:00 - 14:20</td>
 											<td class="session" colspan="3"><span><i class="fa fa-list-alt"
@@ -425,7 +425,7 @@
 														aria-hidden="true"></i></span>-</td>
 											<td class="venue"><span><i class="fa" aria-hidden="true"></i></span>Community</td>
 										</tr>
-										<tr>
+										<tr class="schedules-break">
 											<td class="time"><span><i class="fa fa-clock-o"
 														aria-hidden="true"></i></span>15:00 - 15:20</td>
 											<td class="session" colspan="3"><span><i class="fa fa-list-alt"
@@ -449,7 +449,7 @@
 														aria-hidden="true"></i></span>-</td>
 											<td class="venue"><span><i class="fa" aria-hidden="true"></i></span>Community</td>
 										</tr>
-										<tr>
+										<tr class="schedules-break">
 											<td class="time"><span><i class="fa fa-clock-o"
 														aria-hidden="true"></i></span>16:00 - 16:20</td>
 											<td class="session" colspan="3"><span><i class="fa fa-list-alt"
@@ -473,7 +473,7 @@
 														aria-hidden="true"></i></span>-</td>
 											<td class="venue"><span><i class="fa" aria-hidden="true"></i></span>Community</td>
 										</tr>
-										<tr>
+										<tr class="schedules-break">
 											<td class="time"><span><i class="fa fa-clock-o"
 														aria-hidden="true"></i></span>17:00 - 18:00</td>
 											<td class="session" colspan="3"><span><i class="fa fa-list-alt"
@@ -723,10 +723,6 @@
 	<!-- parallax.js -->
 	<script src="assets/js/parallax.js"></script>
 	<script src="assets/js/theia-sticky-sidebar.js"></script>
-
-	<!-- Google Map -->
-	<script type="text/javascript"
-		src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAQlXnmyNPAeN3c3HNyWoUMqDk6bDF31Cg"></script>
 
 	<!-- Custom -->
 	<script src="assets/js/custom.js"></script>
