--- a/index.html
+++ b/index.html
@@ -591,60 +591,45 @@
 				</div>
 				<div class="speaker-items">
 					<div class="row">
-						<div class="col-lg-3 col-md-6 col-xs-12">
-							<div class="speaker-item">
-								<div class="speaker-image">
-									<img src="images/organizers/gloria.jpg" alt="Gloria Gräser"
+						<div class="col-lg-4">
+							<div class="organizer-item">
+								<img src="images/organizers/gloria.jpg" alt="Gloria Gräser"
 										class="img-responsive">
+								<h3>Gloria Gräser</h3>
+								<h4><br/></h4>
+								<div class="organizer-socials">
+									<a href="https://www.linkedin.com/in/gloria-gr%C3%A4ser-435455b4/" target="_blank"><i class="fa fa-linkedin"></i></a>
 								</div>
-								<!-- speaker-image -->
-								<div class="speaker-content">
-									<div class="details">
-										<h4>Gloria Gräser</h4>
-										<span></span>
-									</div>
-								</div>
-								<!-- speaker-content -->
 							</div>
-							<!-- speaker-item -->
 						</div>
-						<div class="col-lg-3 col-md-6 col-xs-12">
-							<div class="speaker-item">
-								<div class="speaker-image">
-									<img src="images/organizers/rinon.jpg" alt="Rinon Belegu"
+						<div class="col-lg-4">
+							<div class="organizer-item">
+								<img src="images/organizers/rinon.jpg" alt="Rinon Belegu"
 										class="img-responsive">
+								<h3>Rinon Belegu</h3>
+								<h4>AWS User Group Zurich</h4>
+								<h4>Legendary IT</h4>
+								<h4><br/></h4>
+								<div class="organizer-socials">
+									<a href="https://twitter.com/BeleguRinon" class="twitter" target="_blank"><i class="fa fa-twitter"></i></a>
+									<a href="https://www.linkedin.com/in/rinon-belegu/" class="linkedin" target="_blank"><i class="fa fa-linkedin"></i></a>
+									<a href="https://www.legendary.swiss/" class="html5" target="_blank"><i class="fa fa-html5"></i></a>
 								</div>
-								<!-- speaker-image -->
-								<div class="speaker-content">
-									<span class="icon"><i class="fa" aria-hidden="true"></i></span>
-									<div class="details">
-										<h4>Rinon Belegu</h4>
-										<span>AWS User Group Zurich</span>
-										<span>Legendary IT</span>
-									</div>
-								</div>
-								<!-- speaker-content -->
 							</div>
-							<!-- speaker-item -->
 						</div>
-						<div class="col-lg-3 col-md-6 col-xs-12">
-							<div class="speaker-item">
-								<div class="speaker-image">
-									<img src="images/organizers/daniele.jpg" alt="Daniele Madama"
+						<div class="col-lg-4">
+							<div class="organizer-item">
+								<img src="images/organizers/daniele.jpg" alt="Daniele Madama"
 										class="img-responsive">
+								<h3>Daniele Madama</h3>
+								<h4>AWS User Group Ticino</h4>
+								<h4>Helix Cloud</h4>
+								<h4><br/></h4>
+								<div class="organizer-socials">
+									<a href="https://www.linkedin.com/in/danielemadama/" class="linkedin" target="_blank"><i class="fa fa-linkedin"></i></a>
+									<a href="https://www.helixcloud.ch" class="html5" target="_blank"><i class="fa fa-html5"></i></a>
 								</div>
-								<!-- speaker-image -->
-								<div class="speaker-content">
-									<span class="icon"><i class="fa" aria-hidden="true"></i></span>
-									<div class="details">
-										<h4><a href="speaker-details.html">Daniele Madama</a></h4>
-										<span>AWS User Group Ticino</span><br/>
-										<span>Helix Cloud</span>
-									</div>
-								</div>
-								<!-- speaker-content -->
 							</div>
-							<!-- speaker-item -->
 						</div>
 					</div>
 					<!-- row -->
@@ -660,22 +645,16 @@
 		<footer>
 			<div class="overlay home-six-overlay">
 				<div class="container">
-					<h2>BigEvent</h2>
+					<p>AWS Community Day Switzerland 2025</p>
+					<br/>
 					<ul class="event-social">
-						<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-						<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-						<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-						<li><a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
-						<li><a href="#"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a></li>
-						<li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+						<li><a href="https://www.linkedin.com/company/awsugch/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
 					</ul>
 					<p>Copyright &copy; 2025 Cloud Native Association. All Rights Reserved</p>
 				</div>
 			</div>
 		</footer>
 		<!-- Footer End here -->
-
-
 
     </div>
 
