--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 										<li>
 											<a href="#">Past Editions</a>
 											<ul>
-												<li><a href="editions/2022/index.html" target="_blank">2022</a></li>
+												<!--li><a href="editions/2022/index.html" target="_blank">2022</a></li-->
 												<li><a href="editions/2024/index.html" target="_blank">2024</a></li>
 											</ul>
 										</li>
@@ -118,7 +118,7 @@
 										<br/>
 										<h2>Switzerland 2025</h2>
 										<br/>
-										<a href="https://sessionize.com" target="_blank" class="default-button cfp-button">Call for Papers</a>
+										<a href="#" target="_blank" class="default-button cfp-button">Call for Papers open soon!</a>
 									</div>
 								</div><!-- content-left -->
 							</div>
@@ -226,7 +226,7 @@
 								<div class="pricing-item first">
 									<div class="pricing-header">
 										<h3 class="name">Blind Bird</h3>
-										<h2 class="amount">19.-</h2>
+										<h2 class="amount">9.-</h2>
 									</div><!-- pricing-header -->
 									<div class="pricing-options">
 										<p>
@@ -235,7 +235,7 @@
 									</div><!-- pricing-options -->
 
 									<div class="pricing-button">
-										<a href="https://tickets.awsug.ch/event/acd2025">Book now</a>
+										<a href="https://tickets.awsug.ch/event/acd2025" target="_blank">Book now</a>
 									</div>
 								</div>
 							</div>
@@ -243,7 +243,7 @@
 								<div class="pricing-item second">
 									<div class="pricing-header">
 										<h3 class="name">Early Bird</h3>
-										<h2 class="amount">29.-</h2>
+										<h2 class="amount">19.-</h2>
 									</div><!-- pricing-header -->
 									<div class="pricing-options">
 										<p>
@@ -252,7 +252,7 @@
 									</div><!-- pricing-options -->
 
 									<div class="pricing-button">
-										<a href="https://tickets.awsug.ch/event/acd2025">Book now</a>
+										<a href="https://tickets.awsug.ch/event/acd2025" target="_blank">Book now</a>
 									</div>
 								</div>
 							</div>
@@ -269,7 +269,7 @@
 									</div><!-- pricing-options -->
 
 									<div class="pricing-button">
-										<a href="https://tickets.awsug.ch/event/acd2025">Book now</a>
+										<a href="https://tickets.awsug.ch/event/acd2025" target="_blank">Book now</a>
 									</div>
 								</div>
 							</div>
@@ -575,7 +575,7 @@
 							</div>
 						</div>
 					</div><!-- sponsor-item -->
-					<a href="#" class="sponsor-button default-button">become a sponsors</a>
+					<!--a href="#" class="sponsor-button default-button">become a sponsors</a-->
 				</div><!-- container -->
 			</div><!-- overlay -->
 		</section><!-- sponsor -->
